[project]
name = "doc-search-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "joblib==1.5.3",
    "narwhals==2.23.0",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tzdata==2026.2",
]
